# zdm

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
crates/zdm-core/: Cargo.toml
crates/zdm-core/src/: chunk.rs  engine.rs  error.rs  events.rs  lib.rs  meta.rs  probe.rs  progress.rs  worker.rs
crates/zdm-core/tests/: integration.rs
docs/: PROGRESS.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: repro_scheduler.rs
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  commands.rs  db.rs  filename.rs  lib.rs  main.rs  queue.rs  state.rs
src/components/: AboutModal.tsx  AddDownloadModal.tsx  ConflictModal.tsx  DirectoryField.tsx  DownloadRow.tsx  Inspector.tsx  LinkCheckModal.tsx  Rail.tsx  SegmentBar.tsx  SettingsModal.tsx  Sparkline.tsx  TitleBar.tsx  TopBar.tsx  icons.tsx
src/hooks/: useConnectionSpeeds.ts  useDownloads.ts  useHistory.ts
src/lib/: accents.ts  api.ts  categories.ts  types.ts
src/styles/: theme.css
