[workspace]
resolver = "2"
members = ["crates/zdm-core", "src-tauri"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
