[package]
name = "zdm"
version = "0.3.0"
description = "ZDM — a fast, segmented download manager"
authors = ["thisisroot"]
license = "MIT"
repository = "https://github.com/thisisroot/zdm"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
zdm-core = { path = "../crates/zdm-core" }
tokio = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"

[dev-dependencies]
axum = "0.8.4"
tauri = { version = "2.11.3", features = ["test"] }
tempfile = "3"
